fix(organisms): unwitting logo image stretch in SfHeader

--- a/packages/shared/styles/components/SfHeader.scss
+++ b/packages/shared/styles/components/SfHeader.scss
@@ -58,13 +58,12 @@ $header-navigation-item-font-weight: 500 !default;
   }
   &__logo {
     height: calc(100% - 1.25rem);
+    width: auto;
     @media (min-width: $desktop-min) {
       height: calc(100% - 2.5rem);
     }
     img, picture{
       height: 100%;
-      width: auto;
-      max-width: unset;
     }
   }
   &__navigation {
